2001-12-03  Mumit Khan  <khan@nanotech.wisc.edu>

	PR c++/3394
	*  decl.c (xref_basetypes): Handle attributes between 
	  'class' and name.

2001-12-03  Jason Merrill  <jason@redhat.com>

	* class.c (finish_vtbls): Fill in BINFO_VPTR_FIELD in the
	immediate binfos for our virtual bases.

2001-11-29  Mark Mitchell  <mark@codesourcery.com>

	PR c++/3048
	* cp-tree.h (ovl_member): Remove.
	* decl2.c (merge_functions): Handle extern "C" functions 
	specially.
	* tree.c (ovl_member): Remove.

	PR c++/4842
	* class.c (get_basefndecls): Take an IDENTIFIER_NODE, not a
	FUNCTION_DECL, as input.
	(mark_overriders): Remove.
	(warn_hidden): Rework for the new ABI.

	PR c++/3471
	* call.c (convert_like_real): Do not build additional temporaries
	for rvalues of class type.

2001-11-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/3637
	* call.c (non_reference): Add documentation.
	(convert_class_to_reference): Do not strip reference types 
	from conversion operators.
	(maybe_handle_ref_bind): Simplify.
	(compare_ics): Correct handling of references.

2001-11-19  Mark Mitchell  <mark@codesourcery.com>

	* cp/decl2.c (grok_alignof): Make sure that expression created
	while processing a template do not have a type.
	* cp/typeck.c (c_sizeof): Likewise.
	(expr_sizeof): Likewise.
	(c_alignof): Likewise.

2001-11-14  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Make-lang.in: Change all uses of $(manext) to $(man1ext).

2001-10-23  Release Manager

	* GCC 3.0.2 Released.

2001-10-03  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* rtti.c (get_tinfo_decl): Call typeinfo_in_lib_p with the type used
	to build the declaration instead of the declaration itself.

2001-09-28  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	PR c++/4095
	* rtti.c (create_pseudo_type_info): Fix parameter.

2001-09-21  Richard Henderson  <rth@redhat.com>

	* class.c (set_vindex): Mind TARGET_VTABLE_USES_DESCRIPTORS.
	(build_vtbl_initializer): Likewise.
	(build_vfn_ref): New.
	* cp-tree.h: Declare it.